--- a/app/code/common/adminChangePassword.html
+++ b/app/code/common/adminChangePassword.html
@@ -70,18 +70,18 @@
         <div class="changeMessage">
             <div class="changeMessage-flag">修改密码：</div>
             <div class="changeMessage-details">
-                <input type="text">
+                <input type="text" ng-model="password.newPassword">
             </div>
         </div>
         <div class="changeMessage">
             <div class="changeMessage-flag">确认密码：</div>
             <div class="changeMessage-details">
-                <input type="text">
+                <input type="text" ng-model="password.conformPassword">
             </div>
         </div>
     </div>
     <div class="changePassword-buttons">
-        <button class="changePassword-sure changePassword-button">确认</button>
+        <button class="changePassword-sure changePassword-button" ng-click="ok(password)">确认</button>
         <button class="changePassword-cancel changePassword-button" ng-click="closeThisDialog()">取消</button>
     </div>
 </div>
