--- a/app/code/common/changePassword.html
+++ b/app/code/common/changePassword.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="changePassword-buttons">
-        <button class="changePassword-sure changePassword-button">确认</button>
+        <button class="changePassword-sure changePassword-button" ng-click="ok()">确认</button>
         <button class="changePassword-cancel changePassword-button" ng-click="closeThisDialog()">取消</button>
     </div>
 </div>
