修改教师修改自己信息的接口

--- a/app/code/common/changePassword.html
+++ b/app/code/common/changePassword.html
@@ -70,19 +70,19 @@
         <div class="changeMessage">
             <div class="changeMessage-flag">原始密码：</div>
             <div class="changeMessage-details">
-                <input type="text">
+                <input type="text" ng-model="password.oldPassword">
             </div>
         </div>
         <div class="changeMessage">
             <div class="changeMessage-flag">修改密码：</div>
             <div class="changeMessage-details">
-                <input type="text">
+                <input type="text" ng-model="password.newPassword">
             </div>
         </div>
         <div class="changeMessage">
             <div class="changeMessage-flag">确认密码：</div>
             <div class="changeMessage-details">
-                <input type="text">
+                <input type="text" ng-model="password.conformPassword">
             </div>
         </div>
     </div>
