--- a/app/code/teacher/seeStudentDetails.html
+++ b/app/code/teacher/seeStudentDetails.html
@@ -95,7 +95,7 @@
             <i class="glyphicon glyphicon-remove" ng-click="closeThisDialog()"></i>
         </div>
     </div>
-    <div class="seeTeacherDetails-content" ng-repeat="infor in personDetails">
+    <div class="seeTeacherDetails-content">
         <div class="teacherDetails-img" ng-if="!infor.url_img">
             <img src="image/person.jpg" alt="{{infor.user_name}}">
             <div class="teacherDetails-img-tips">
