--- a/app/code/admin/seeTeacherDetails.html
+++ b/app/code/admin/seeTeacherDetails.html
@@ -88,7 +88,7 @@
         overflow: hidden;
     }
 </style>
-<div class="seeTeacherDetails" ng-repeat="infor in personDetails">
+<div class="seeTeacherDetails">
     <div class="seeTeacherDetails-top">
         <div class="seeTeacherDetails-title">教师详细信息</div>
         <div class="close-icno">
@@ -96,14 +96,14 @@
         </div>
     </div>
     <div class="seeTeacherDetails-content">
-        <div class="teacherDetails-img" ng-if="!infor.url_img">
-            <img src="image/person.jpg" alt="{{infor.user_name}}">
+        <div class="teacherDetails-img" ng-if="!teacInfo.url_img">
+            <img src="image/person.jpg" alt="{{teacInfo.user_name}}">
             <div class="teacherDetails-img-tips">
                 <span>该教师还没有照片</span>
             </div>
         </div>
-        <div class="teacherDetails-img" ng-if="infor.url_img">
-            <img src="image/{{infor.url_img}}" alt="{{infor.user_name}}">
+        <div class="teacherDetails-img" ng-if="teacInfo.url_img">
+            <img src="image/{{teacInfo.url_img}}" alt="{{teacInfo.user_name}}">
             <!--<div class="url_img-img-tips">-->
                 <!--<span></span>-->
             <!--</div>-->
@@ -112,31 +112,31 @@
             <div class="teacherDetails-row">
                 <div class="teacherDetails-colLeft">
                     <div class="teacherDetails-flag">姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.user_name"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.user_name"></div>
                 </div>
                 <div class="teacherDetails-colRight">
                     <div class="teacherDetails-flag">政治面貌:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.political_outlook"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.political_outlook"></div>
                 </div>
             </div>
             <div class="teacherDetails-row">
                 <div class="teacherDetails-colLeft">
                     <div class="teacherDetails-flag">工&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.user_num"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.user_num"></div>
                 </div>
                 <div class="teacherDetails-colRight">
                     <div class="teacherDetails-flag">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;务:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.position"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.position"></div>
                 </div>
             </div>
             <div class="teacherDetails-row">
                 <div class="teacherDetails-colLeft">
                     <div class="teacherDetails-flag">联系电话:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.phone"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.phone"></div>
                 </div>
                 <div class="teacherDetails-colRight">
                     <div class="teacherDetails-flag">工作邮箱:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.mail"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.mail"></div>
                 </div>
             </div>
             <div class="teacherDetails-row">
@@ -144,18 +144,18 @@
                     <div class="teacherDetails-flag">所带班级:</div>
                     <div class="teacherDetails-con">
                         <select class="teacherDetails-con-options">
-                            <option ng-repeat="clazz in infor.schoolClassList" ng-bind="clazz.class_name"></option>
+                            <option ng-repeat="clazz in teacInfo.schoolClassList" ng-bind="clazz.class_name"></option>
                         </select>
                     </div>
                 </div>
                 <div class="teacherDetails-colRight">
                     <div class="teacherDetails-flag">家庭住址:</div>
-                    <div class="teacherDetails-con" ng-bind="infor.address"></div>
+                    <div class="teacherDetails-con" ng-bind="teacInfo.address"></div>
                 </div>
             </div>
             <div class="teacherDetails-row">
                 <div class="teacherDetails-flag">个人简介:</div>
-                <div class="teacherDetails-con teacherDetails-area" ng-bind="infor.introduce"></div>
+                <div class="teacherDetails-con teacherDetails-area" ng-bind="teacInfo.introduce"></div>
             </div>
         </div>
     </div>
