--- a/app/code/teacher/classroomManage.html
+++ b/app/code/teacher/classroomManage.html
@@ -64,7 +64,7 @@
                         <button class="operation-button" ng-click="cheangePassword(stuInfo.student_id,stuInfo.user_num)">修改密码</button>
                         <button class="operation-button" ng-click="seeStudentDetails(stuInfo.student_id)">查看信息</button>
                         <button class="operation-button" ng-click="removerStudent(stuInfo.user_num,stuInfo.user_name)">删除</button>
-                        <button class="operation-button" ng-click="setEmailDate()">设置日期</button>
+                        <button class="operation-button" ng-click="setEmailDate(stuInfo.student_id)">设置日期</button>
                     </div>
                 </td>
             </tr>
