--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <script src="frameworks/datepicker/bootstrap-datetimepicker.zh-CN.js"></script>
 
     <!--Echarts-->
-    <script src="frameworks/echarts/dist/echarts.js"></script>
+    <script src="frameworks/echarts/dist/echarts.min.js"></script>
     <script src="frameworks/echarts/map/js/china.js"></script>
 
     <script src="frameworks/viz_v1.js"></script>
